--- a/calendar.css
+++ b/calendar.css
@@ -1,5 +1,4 @@
 :root{
-	margin:0px;
 	--calendar-bg:transparent;
 	--calendar-day-bg:#eee;
 	--calendar-day-bg-hover: #222;
@@ -16,6 +15,7 @@
 	display: none;
 }
 .day, .day-invisible{
+	box-sizing: border-box;
 	width: calc(100% / 7 - 2px);
 	padding: 5px;
 	border: 1px solid #fff;
@@ -40,8 +40,6 @@
 	text-align: center;
 	font-size:var(--calendar-month-size);
 }
-
 .prev, .next{
 	background-color: transparent;	
 }
-
